--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -25,12 +24,14 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "cypress:open": "cypress open"
   },
   "eslintConfig": {
     "extends": [
       "react-app",
-      "react-app/jest"
+      "react-app/jest",
+      "plugin:cypress/recommended"
     ]
   },
   "browserslist": {
@@ -46,6 +47,9 @@
     ]
   },
   "devDependencies": {
+    "@testing-library/user-event": "^14.4.3",
+    "cypress": "^12.11.0",
+    "eslint-plugin-cypress": "^2.13.3",
     "jsdoc": "^4.0.2",
     "react-docgen": "^5.4.3",
     "react-styleguidist": "^13.1.1"
